<resources>
    <string name="app_name">Agenda</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_b">Nuevo</string>
    <string name="add">Añadir</string>
    <string name="update">Actualizar</string>
    <string name="delete">Eliminar</string>
    <string name="list">Listado</string>
    <string name="id">ID</string>
    <string name="name">Nombre</string>
    <string name="name_">Nombre:</string>
    <string name="last_name">Apellido</string>
    <string name="mail">E-mail</string>
    <string name="mail_">E-mail:</string>
    <string name="phone">Teléfono</string>
    <string name="phone_">Telf.:</string>
    <string name="new_contact">Nuevo Contacto</string>
    <string name="delete_contact">Eliminar Contacto</string>
    <string name="update_contact">Actualizar Contacto</string>
    <string name="list_contact">Listado de Contactos</string>
    <string name="select_contact">Selecciona un contacto</string>

</resources>